# intrinsic

./: pyproject.toml
docker/: Dockerfile
